[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/Inventory/inventorySelector.png" type="Texture" id=1]
[ext_resource path="res://Art/Inventory/invenotrySlot.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player/Inventory/Slot.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player/Inventory/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/Gui/PauseMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="PauseGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="Sprite" parent="Inventory"]
position = Vector2( 22, 0 )
scale = Vector2( 0.565, 0.565 )
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Hotbar" type="GridContainer" parent="Inventory"]
margin_right = 106.0
margin_bottom = 18.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="Inventory/Hotbar"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="Inventory/Hotbar"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Panel" parent="Inventory/Hotbar"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="Inventory/Hotbar"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot5" type="Panel" parent="Inventory/Hotbar"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="PauseInventory" type="GridContainer" parent="Inventory"]
visible = false
margin_top = 22.0
margin_right = 106.0
margin_bottom = 84.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot6" type="Panel" parent="Inventory/PauseInventory"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot7" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot8" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot9" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot10" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot11" type="Panel" parent="Inventory/PauseInventory"]
margin_top = 22.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot12" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 22.0
margin_top = 22.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot13" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 44.0
margin_top = 22.0
margin_right = 62.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot14" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 66.0
margin_top = 22.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot15" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 88.0
margin_top = 22.0
margin_right = 106.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot16" type="Panel" parent="Inventory/PauseInventory"]
margin_top = 44.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot17" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 22.0
margin_top = 44.0
margin_right = 40.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot18" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 44.0
margin_top = 44.0
margin_right = 62.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot19" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 66.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Slot20" type="Panel" parent="Inventory/PauseInventory"]
margin_left = 88.0
margin_top = 44.0
margin_right = 106.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="PauseMenu" type="Control" parent="."]
visible = false
margin_left = 414.0
margin_top = 240.0
margin_right = 454.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="PauseMenu"]
margin_right = 50.0
margin_bottom = 20.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseMenu/MenuButton" to="." method="_on_MenuButton_pressed"]
